--- a/firebase.json
+++ b/firebase.json
@@ -3,6 +3,10 @@
   "rules": "firestore.rules"
 },
 
+  "storage": {
+  "rules": "storage.rules"
+},
+
   "hosting": {
     "public": "./public",
     "headers": [{
