--- a/firebase.json
+++ b/firebase.json
@@ -8,13 +8,6 @@
 },
 
   "hosting": {
-    "public": "./public",
-    "headers": [{
-      "source" : "**/*.@(js|html)",
-      "headers" : [ {
-        "key" : "Cache-Control",
-        "value" : "max-age=0"
-      } ]
-    }]
+  "public": "./public"
   }
 }
